force-app/main/default/objects/Seat__c/fields/Coach__c.field-meta.xml
<CustomField>
    <fullName>Coach__c</fullName>
    <label>Coach</label>
    <referenceTo>Coach__c</referenceTo>
    <relationshipLabel>Seat</relationshipLabel>
    <relationshipName>Seat</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>