force-app/main/default/objects/Seat__c/fields/Position_X__c.field-meta.xml
<CustomField>
    <fullName>Position_X__c</fullName>
    <label>Position_X</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>