force-app/main/default/objects/Seat__c/fields/Position_Y__c.field-meta.xml
<CustomField>
    <fullName>Position_Y__c</fullName>
    <label>Position_Y</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>