force-app/main/default/objects/Seat__c/fields/Seat_Type__c.field-meta.xml
<CustomField>
    <fullName>Seat_Type__c</fullName>
    <label>Seat_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Upper</fullName>
            </value>
            <value>
                <fullName>Side_Lower</fullName>
            </value>
            <value>
                <fullName>Side_Upper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>